--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="teammember.html">Team Members</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
