--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <style>
     /* Remove the navbar's default margin-bottom and rounded borders */ 
+    ol{color:red;}
     .navbar {
         background: #00ff33;
     
