--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <style>
     /* Remove the navbar's default margin-bottom and rounded borders */ 
-    ol{color:red;}
+    .ni {color:red;
+    }
     .navbar {
         background: #00ff33;
     
@@ -115,7 +116,7 @@
        <div class="row content">
            <h1>Contact numbers</h1>
            <p class="welcom">For Match , Contact Any Number</p>
-           <ol>
+           <ol class="ni">
                <li>Tejas Dalvi : 7030455421</li>
                <li>Shubham phanse : 7977629071 </li>
                <li>Rohit shinde : 7977644275</li>
