--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
     .nav{background:   #00ff33;}
     body{
-        background-image: url("http://wallpapersexpert.com/data/out/30/3542728-cristiano-ronaldo-wallpapers.jpg");
+        background-image: url("ronaldo-Wallpaper-1080p-number-Bxq.jpg");
         background-size: cover;
         background-repeat:  no-repeat;
         
