--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     @media screen and (max-width: 767px) {
       .sidenav {
         height: auto;
+        width:auto;
         padding:15px;
       }
       .row.content {height:auto;} 
